# TRACE-Q

./: .gitignore  CMakeLists.txt  LICENSE  README.md  libpqxx.cmake  main.cpp  sanitizers.cmake  setup.ps1  setup.sh  trajectory.db  trajectory.db-journal
.github/workflows/: sqlite-installer.yml
Simp-Algorithms/: MRPA.cpp  MRPA.h
datastructure/: Node.cpp  Node.h  trajectory.cpp  trajectory.h  trajectory_structure.cpp  trajectory_structure.h
sql/: create_index.sql  create_index_original.sql  create_index_simplified.sql  create_table.sql  create_table_original.sql  create_table_simplified.sql
src/: CMakeLists.txt  main.cpp
src/benchmark/: Benchmark.cpp  Benchmark.hpp  CMakeLists.txt  F1.cpp  F1.hpp  TRACE_Q_Benchmark.cpp  TRACE_Q_Benchmark.hpp  benchmark.cpp  benchmark.hpp
src/benchmark/benchmark-query-objects/: Benchmark_KNN_Query.hpp  Benchmark_Query.hpp  Benchmark_Range_Query.hpp
src/boost-api/: CMakeLists.txt  Endpoint_Handlers.cpp  Endpoint_Handlers.hpp  Start_API.cpp  Start_API.hpp  endpoint_handlers.cpp  endpoint_handlers.hpp  start-api.cpp  start-api.hpp
src/data/: Node.hpp  Trajectory.hpp  trajectory.db  trajectory_structure.cpp  trajectory_structure.hpp
src/logging/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/oatpp-server/: README.md
src/oatpp-server/src/controller/: MyController.hpp
src/querying/: CMakeLists.txt  KNN_Query.cpp  KNN_Query.hpp  KNN_Query_Test.cpp  KNN_Query_Test.hpp  Query.cpp  Query.hpp  Range_Query.cpp  Range_Query.hpp  Range_Query_Test.cpp  Range_Query_Test.hpp
src/simp-algorithms/: CMakeLists.txt  MRPA.cpp  MRPA.hpp  TRACE_Q.cpp  TRACE_Q.hpp
src/trajectory_data_handling/: CMakeLists.txt  File_Manager.cpp  File_Manager.hpp  Query_Handler.cpp  Query_Handler.hpp  Trajectory_Manager.cpp  Trajectory_Manager.hpp  sqlite_querying.cpp  sqlite_querying.hpp  trajectory.cpp  trajectory.h  trajectory_file_manager.cpp  trajectory_file_manager.hpp  trajectory_sql.cpp  trajectory_sql.hpp
tests/: CMakeLists.txt  benchmark_test.cpp  mrpa_test.cpp  node_test.cpp  query_test.cpp  test_trajectories.hpp  trajectory_test.cpp
trajectory_data_handling/: sqlite_querying.cpp  sqlite_querying.h  trajectory.cpp  trajectory.h  trajectory_file_manager.cpp  trajectory_file_manager.h
